modules/demo-workloads/opni/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: opni
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http-prod
spec:
  tls:
    - hosts:
        - grafana.plgrnd.be
      secretName: grafana-tls-secret
  rules:
  - host: grafana.plgrnd.be
    http:
      paths:
      - backend:
          service:
            name: grafana-service
            port:
              number: 3000
        path: /
        pathType: Prefix
