modules/demo-workloads/opni/ingress-opni.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opni
  namespace: opni
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http-prod
spec:
  tls:
    - hosts:
        - opni.plgrnd.be
      secretName: opni-tls-secret
  rules:
  - host: opni.plgrnd.be
    http:
      paths:
      - backend:
          service:
            name: opni
            port:
              number: 9090
        path: /
        pathType: Prefix
